                     CHANGES version 5.24.0

           This file summarizes changes made since 5.0

Version 5.24.0

Fixed: Issue #624: Make the fail2ban protocol test backward
compatible with older protocol versions.

Fixed: Issue #634: Check program output.


Version 5.23.0

New: Spamassassin protocol test added. Example:
    check process spamd with pidfile /var/run/spamassassin.pid
       start program = "/etc/init.d/spamassassin start"
       stop  program = "/etc/init.d/spamassassin stop"
       if failed port 783 protocol spamassassin then alert

New: Fail2ban protocol test added. Example:
    check process fail2ban with pidfile /var/run/fail2ban/fail2ban.pid
       start program = "/etc/init.d/fail2ban start"
       stop program = "/etc/init.d/fail2ban stop"
       if failed unixsocket /var/run/fail2ban/fail2ban.sock protocol fail2ban then alert

New: Issue #594: Systemd template for Monit: Added documentation reference.

Fixed: Issue #601: The Monit web interface highlighted non-SSL TCP port tests
with red, even though there was no error.

Fixed: Issue #602: Linux: When checking root filesystem via a mountpoint "/",
Monit may alert that the filesystem flags changed if the system has "rootfs"
overlay mount.

Fixed: Issue #603: Support existence/nonexistence test for filesystem check.

Fixed: Issue #614: Monit may crash if "total memory" test is used in "check system"
context. The "total memory" test is for process checks only (includes children
memory total) and will produce syntax error if used in system check now.

Fixed: Issue #616: If no filedescriptors limit is set when Monit starts, Monit may 
freeze for a long time during startup and when executing start/stop methods or
program checks.

Fixed: The "check program" may timeout if the executed program produces lot of output.
Thanks to Artur Molchanov for patch.

Fixed: *BSD: If device parsing for UFS filesystem failed, skip the I/O monitoring