@@ -7,7 +7,9 @@ Version 5.24.0
 Fixed: Issue #624: Make the fail2ban protocol test backward
 compatible with older protocol versions.
 
-Fixed: Issue #634: Check program output.
+Fixed: Issue #633: HTTP protocol test: allow to use zero status value.
+
+Fixed: Issue #634: Display check program output.
 
 
 Version 5.23.0
